--- a/AUTHORS
+++ b/AUTHORS
@@ -4,4 +4,5 @@
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com>
-Makinde Oluwasegun <Bryanmankind@github.com> 
+Makinde Oluwasegun <Bryanmankind@github.com>
+Ogwu Justina Ebele <snowjay7@github.com> 
