--- a/AUTHORS
+++ b/AUTHORS
@@ -5,4 +5,4 @@ Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com>
 Makinde Oluwasegun <Bryanmankind@github.com>
-Ogwu Justina Ebele <snowjay7@github.com> 
+Ogwu Justina Ebele <ogwu.justina@gmail.com> 
